--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.6+4
+  path_provider: ^2.0.13
+  pdf: ^3.8.4
   shared_preferences: ^2.0.18
 
 dev_dependencies:
@@ -58,6 +60,7 @@ flutter:
   assets:
     - images/londri.png
     - images/logo.png
+    - font/TimesRegular.ttf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
