--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,16 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.12.0
+  flutter_native_splash: ^2.2.19
+
+flutter_icons:
+  android: "launcher_icon"
+  image_path: "images/logo.png"
+
+flutter_native_splash:
+  color: #FFFFFF
+  background_image: 'images/splash.png'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
